# navil

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_COLLECTION.md  DEPLOY.md  Dockerfile  Dockerfile.honeypot  LICENSE  LICENSE.cloud  Makefile  README.md  SECURITY.md  alembic.ini  bench_shim_latency.py  bench_total_latency.py  docker-compose.honeypot.yaml  docker-compose.yml  index.html  pentest_results.json  policy.auto.yaml  pyproject.toml  state_of_mcp_security.md  state_of_mcp_security_v3.md
.github/: dependabot.yml
.github/actions/navil-scan/: action.yml
.github/actions/policy-validate/: action.yml  validate.py
.github/actions/scan/: README.md  action.yml
.github/workflows/: ci.yml  mcp-security-scan.yml  navil-scan.yml
dashboard/: .env.example  .gitignore  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
dashboard/src/: App.tsx  App.tsx.oss  api.ts  cloudApi.ts  index.css  main.tsx
dashboard/src/auth/: AuthTokenBridge.tsx  ClerkProviderWrapper.tsx  LocalAuthContext.tsx  ProtectedRoute.tsx
dashboard/src/components/: AnimatedNumber.tsx  CloudError.tsx  CloudGuard.tsx  CodeBlock.tsx  ConnectionError.tsx  DocsSidebar.tsx  FeatureComparisonTable.tsx  Footer.tsx  Icon.tsx  LLMErrorCard.tsx  LogoCloud.tsx  MegaNav.tsx  MiniBar.tsx  MockAnomalyDashboard.tsx  MockRemediationEngine.tsx  MockTrafficMonitor.tsx  NewsletterSignup.tsx  PageHeader.tsx  RelativeTime.tsx  ScoreGauge.tsx  SectionHeader.tsx  SeverityBadge.tsx  (+7 more)
deploy/honeypot-oci/: Dockerfile.honeypot  Dockerfile.scanner  docker-compose.yml  honeypot-collector.py  honeypot-entrypoint.sh  scanner-entrypoint.sh  setup-oci.sh
docs/: openclaw-integration.md  proxy-interface-spec.md
docs/blog/: hn-submission.md  launch-post.md  reddit-post.md  twitter-thread.md
docs/guides/: claude-desktop.md  continue-dev.md  cursor.md
docs/plans/: 2026-03-08-oss-frontend-cleanup-design.md  2026-03-08-oss-frontend-cleanup.md  cloud-threat-intel-api.md
mcp_guardian/: __init__.py  __main__.py  anomaly_detector.py  cli.py  credential_manager.py  policy_engine.py  scanner.py
mcp_guardian/sample_configs/: vulnerable_server.json
mcp_guardian/sample_policies/: default_policy.yaml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
navil/: __init__.py  __main__.py  _compat.py  anomaly_detector.py  blocklist.py  blocklist_updater.py  cli.py  credential_manager.py  discovery.py  oidc.py  openapi_bridge.py  openapi_scanner.py  openapi_server.py  pentest.py  policy_engine.py  proxy.py  sarif.py  scanner.py  seed.py  shim.py  telemetry.py  telemetry_event.py  telemetry_worker.py  threat_intel.py  types.py  wrap.py
navil-proxy/: Cargo.toml  Dockerfile
navil-proxy/src/: auth.rs  main.rs  proxy.rs  scope.rs  telemetry.rs
navil-shim/: Cargo.toml
navil-shim/src/: main.rs  policy.rs  shim.rs  telemetry.rs  wrap.rs
navil/a2a/: __init__.py  agent_card.py  tasks.py
navil/adaptive/: __init__.py  baselines.py  confidence.py  feedback.py  pattern_store.py
navil/canary/: README.md  __init__.py  __main__.py  config.py  kit.py  reporter.py  server.py
navil/cloud/: __init__.py  admin_api.py  analytics.py  api.py  api_keys.py  app.py  auth.py  billing.py  blocklist_distribution.py  blocklist_updater.py  contribution_api.py  database.py  demo.py  email.py  models.py  pipeline.py  rate_limiter.py  scheduler.py  state.py  stripe_billing.py  telemetry_sync.py  threat_intel_fetcher.py
navil/commands/: __init__.py  a2a.py  analyze.py  anomaly.py  blocklist.py  cloud.py  crawl.py  credential.py  export.py  feedback.py  honeypot.py  init.py  openapi.py  pentest.py  policy.py  proxy.py  redteam.py  report_mcp.py  scan.py  scan_batch.py  secure.py  seed.py  shim.py  test.py
navil/crawler/: __init__.py  auto_promoter.py  batch_scanner.py  registry_crawler.py  risk_scorer.py  scan_history.py  scheduler.py
navil/data/: blocklist_v1.json  discovered_vectors.yaml  public_attacks.yaml  seed_patterns.json
navil/honeypot/: __init__.py  collector.py  deploy.py  server.py  signature_extractor.py
navil/llm/: __init__.py  analyzer.py  cache.py  client.py  policy_gen.py  self_healing.py
navil/lua/: cascade_revoke.lua
navil/ml/: __init__.py  clustering.py  features.py  isolation_forest.py  model_store.py
navil/report/: __init__.py  scan_diff.py  state_of_mcp.py  trend_analyzer.py  trend_report.py
navil/safemcp/: __init__.py  categories.py  generator.py  pool_converter.py
navil/sample_configs/: secure_server.json  vulnerable_server.json
navil/static_analysis/: __init__.py  analyzer.py  utils.py
navil/templates/: filesystem.yaml  github.yaml  kubectl.yaml
npm-package/: README.md  install.sh  package.json
scripts/: enterprise_live_fire.py  navil_100_attacks.py  navil_200_part1.py  navil_200_part2.py  navil_200_part3.py  navil_40_attacks.py  red_team_payloads.sh  red_team_via_proxy.sh  seed_enterprise_drill.py
skills/navil-audit/: SKILL.md  skill.json
skills/navil-policy/: SKILL.md  skill.json
skills/navil-shield/: SKILL.md  skill.json
tests/: conftest.py  regression_test.py  test_a2a.py  test_adaptive_baselines.py  test_adaptive_confidence.py  test_adaptive_feedback.py  test_adaptive_patterns.py  test_adversarial.py  test_ai_policy_builder.py  test_anomaly_detector.py  test_auto_promoter.py  test_batch_scanner.py  test_blocklist.py  test_blocklist_distribution.py  test_blocklist_updater.py  test_canary_server.py  test_cascade_revocation.py  test_cli.py  test_cloud_telemetry_sync.py  test_command_crawl.py  test_command_redteam.py  test_command_secure.py  test_command_test.py  test_contribution_api.py  test_crawler.py  test_credential_manager.py  test_delegation.py  test_honeypot_server.py  test_ingested_intel.py  test_init_command.py  test_llm_analyzer.py  test_llm_client.py  test_llm_policy_gen.py  test_llm_streaming.py  test_ml_clustering.py  test_ml_features.py  test_ml_isolation_forest.py  test_new_detectors.py  test_oidc_exchange.py  test_openapi.py  (+27 more)
(+99 files in other folders)
