[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navil"
version = "0.1.0"
description = "Supply-chain security toolkit for MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Pantheon Lab Limited", email = "info@pantheonlab.ai"},
]
keywords = [
    "mcp",
    "security",
    "supply-chain",
    "ai-agents",
    "credentials",
    "policy-engine",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "PyYAML>=6.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]
llm = [
    "anthropic>=0.25",
    "openai>=1.12",
    "google-generativeai>=0.5",
]
cloud = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
all = [
    "navil[ml]",
    "navil[llm]",
    "navil[cloud]",
]

[project.scripts]
navil = "navil.cli:main"

[project.urls]
Homepage = "https://github.com/ivanlkf/navil"
Repository = "https://github.com/ivanlkf/navil"
Documentation = "https://github.com/ivanlkf/navil#readme"
Issues = "https://github.com/ivanlkf/navil/issues"
Changelog = "https://github.com/ivanlkf/navil/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["navil*"]

[tool.setuptools.package-data]
navil = ["sample_configs/*.json", "sample_policies/*.yaml", "py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"navil/ml/*.py" = ["N806"]   # X, X_scaled are conventional in ML code
"tests/test_ml_*.py" = ["E402", "N806"]  # imports after importorskip; ML X convention

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true

# Optional dependencies — stubs not always available in CI
[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "starlette.*",
    "pydantic.*",
    "httpx.*",
    "anthropic.*",
    "openai.*",
    "google.*",
    "sklearn.*",
    "numpy.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=navil --cov-report=term-missing --tb=short"

[tool.coverage.run]
source = ["navil"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "navil/cloud/*",   # tested via cloud integration tests
    "navil/ml/*",      # tested in separate test-ml CI job
    "navil/cli.py",    # CLI glue code — tested via integration
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
