[package]
name = "navil-shim"
version = "0.1.0"
edition = "2021"
description = "CLI PATH-prefix shim for tool wrapping and observability"

[[bin]]
name = "navil-shim"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
